# pydantic-pkgr

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  tests.py
.github/: FUNDING.yml
.github/workflows/: python-app.yml
django_example_project/: README.md
django_example_project/project/: admin.py  models.py  settings.py  views.py
django_example_project/project/migrations/: 0001_initial.py  0002_alter_dependency_options_dependency_min_version.py
pydantic_pkgr/: __init__.py  admin.py  apps.py  base_types.py  binary.py  binprovider.py  binprovider_ansible.py  binprovider_apt.py  binprovider_brew.py  binprovider_npm.py  binprovider_pip.py  binprovider_pyinfra.py  models.py  semver.py  settings.py  shallowbinary.py  views.py
